# rosac

./: README.md  default.nix  rosalia.cabal  rosalia.cabal.old  rosalia.nix  shell.nix  test.rosa
app/: Main.hs
examples/: test.rosa
src/Rosalia/: AST.hs  Lexer.hs  Log.hs  Parser.hs  Scanner.hs
src/Rosalia/Compiler/Frontend/: AST.hs  Log.hs  Parser.hs  Scanner.hs
src/Rosalia/Language/: Prelude.hs
