cabal-version:      2.4
name:               Rosalia
version:            1.0.0.0


synopsis:           Rosalia Compiler

description:        Compiler for the Rosalia language (Haskell
                    port)
             
             

bug-reports:        https://github.com/lillycat332/
homepage:           https://github.com/lillycat332/
license:            BSD-3-Clause
license-file:       LICENSE
stability:          experimental
author:             Lilly Cham <lilly@lillycat.tech>
maintainer:         Lilly Cham <lilly@lillycat.tech>

copyright:          (c) 2022 Lilly Cham
category:           Database
extra-source-files: CHANGELOG.md

library
    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:    base ^>=4.16.2.0 
                    , megaparsec

    exposed-modules:  Rosalia.Lexer

    ghc-options: -Wall -O3

executable rosalia
    main-is:          Main.hs
    build-depends:    base ^>=4.16.2.0
                    , optparse-applicative

    other-modules:    Paths_Rosalia

    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N -O3
    hs-source-dirs:   app
    default-language: Haskell2010

other-modules:
    Paths_Rosalia