cabal-version:      2.4
name:               rosalia
version:            1.0.0.0

synopsis:           Rosalia Compiler
description:        Compiler for the Rosalia language 
category:           Rosalia
bug-reports:        https://github.com/lillycat332/rosac/issues
homepage:           https://github.com/lillycat332/rosac
license:            BSD-2-Clause
license-file:       LICENSE
stability:          experimental
author:             Lilly Cham <lilly@lillycat.tech>
maintainer:         Lilly Cham <lilly@lillycat.tech>

copyright:          (c) 2022 Lilly Cham

library
    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:    base ^>=4.16.2.0 
                    , megaparsec
                    , text
                    , string-conversions
                    , parser-combinators

    exposed-modules:  Rosalia.Parser
                    , Rosalia.Log
                    , Rosalia.AST
                    , Rosalia.Scanner

    ghc-options: -Wall -O3

executable rosac
    main-is:       Main.hs
    build-depends: base ^>=4.16.2.0
                 , optparse-applicative
                 , rosalia
                 , text        

    other-modules: Paths_rosalia

    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N -O3
    hs-source-dirs:   app
    default-language: Haskell2010